single protos created

--- a/src/public/prototypes/albums.html
+++ b/src/public/prototypes/albums.html
@@ -13,21 +13,31 @@
         <h1 class="header-title">Muzify | Albums</h1>
         <nav class="navbar">
           <ul class="navbar-list">
-            <li class="navbar-list__item"><a href="songs.html">Songs</a></li>
             <li class="navbar-list__item">
-              <a href="artists.html">Artists</a>
+              <a href="Artists.html">Artists</a>
             </li>
+            <li class="navbar-list__item"><a href="Songs.html">Songs</a></li>
           </ul>
         </nav>
       </header>
       <main class="content">
         <h2 class="content-title">Albums</h2>
         <ul class="content-list">
-          <li class="content-list__item"><a href="album1.html">Album 1</a></li>
-          <li class="content-list__item"><a href="album2.html">Album 2</a></li>
-          <li class="content-list__item"><a href="album3.html">Album 3</a></li>
-          <li class="content-list__item"><a href="album4.html">Album 4</a></li>
-          <li class="content-list__item"><a href="album5.html">Album 5</a></li>
+          <li class="content-list__item">
+            <a href="AlbumOne.html">Album 1</a>
+          </li>
+          <li class="content-list__item">
+            <a href="AlbumTwo.html">Album 2</a>
+          </li>
+          <li class="content-list__item">
+            <a href="AlbumThree.html">Album 3</a>
+          </li>
+          <li class="content-list__item">
+            <a href="AlbumFour.html">Album 4</a>
+          </li>
+          <li class="content-list__item">
+            <a href="AlbumFive.html">Album 5</a>
+          </li>
         </ul>
       </main>
       <footer class="footer">
