--- a/src/public/prototypes/artists.html
+++ b/src/public/prototypes/artists.html
@@ -13,9 +13,11 @@
         <h1 class="header-title">Muzify | Artists</h1>
         <nav class="navbar">
           <ul class="navbar-list">
-            <li class="navbar-list__item"><a href="songs.html">Songs</a></li>
             <li class="navbar-list__item">
-              <a href="albums.html">Albums</a>
+              <a href="Albums.html">Albums</a>
+            </li>
+            <li class="navbar-list__item">
+              <a href="Songs.html">Songs</a>
             </li>
           </ul>
         </nav>
@@ -24,7 +26,7 @@
         <h2 class="content-title">Artists</h2>
         <ul class="content-list">
           <li class="content-list__item">
-            <a href="artist1.html">Artist 1</a>
+            <a href="ArtistOne.html">Artist 1</a>
           </li>
           <li class="content-list__item">
             <a href="artist2.html">Artist 2</a>
