--- a/src/public/prototypes/AlbumOne.html
+++ b/src/public/prototypes/AlbumOne.html
@@ -10,7 +10,7 @@
   <body>
     <div class="wrapper">
       <header class="header">
-        <h1 class="header-title">Muzify | Songs</h1>
+        <h1 class="header-title">Muzify | Album Name</h1>
         <nav class="navbar">
           <ul class="navbar-list">
             <li class="navbar-list__item">
@@ -19,19 +19,25 @@
             <li class="navbar-list__item">
               <a href="Artists.html">Artists</a>
             </li>
+            <li class="navbar-list__item">
+              <a href="Songs.html">Songs</a>
+            </li>
           </ul>
         </nav>
       </header>
       <main class="content">
-        <h2 class="content-title">Song Titles</h2>
+        <h2 class="content-title">Album Name</h2>
+        <h3 class="content-title">Artist Name</h3>
         <ul class="content-list">
-          <li class="content-list__item"><a href="songOne.html">song 1</a></li>
-          <li class="content-list__item"><a href="songTwo.html">song 2</a></li>
           <li class="content-list__item">
-            <a href="songThree.html">song 3</a>
+            <a href="SongOne.html">Song 1</a>
           </li>
-          <li class="content-list__item"><a href="songFour.html">song 4</a></li>
-          <li class="content-list__item"><a href="songFive.html">song 5</a></li>
+          <li class="content-list__item"><a href="SongTwo.html">Song 2</a></li>
+          <li class="content-list__item">
+            <a href="SongThree.html">Song 3</a>
+          </li>
+          <li class="content-list__item"><a href="SongFour.html">Song 4</a></li>
+          <li class="content-list__item"><a href="SongFive.html">Song 5</a></li>
         </ul>
       </main>
       <footer class="footer">
