--- a/src/public/prototypes/SongOne.html
+++ b/src/public/prototypes/SongOne.html
@@ -10,7 +10,7 @@
   <body>
     <div class="wrapper">
       <header class="header">
-        <h1 class="header-title">Muzify | Songs</h1>
+        <h1 class="header-title">Muzify | Song Name</h1>
         <nav class="navbar">
           <ul class="navbar-list">
             <li class="navbar-list__item">
@@ -19,20 +19,22 @@
             <li class="navbar-list__item">
               <a href="Artists.html">Artists</a>
             </li>
+            <li class="navbar-list__item">
+              <a href="Songs.html">Songs</a>
+            </li>
           </ul>
         </nav>
       </header>
       <main class="content">
-        <h2 class="content-title">Song Titles</h2>
-        <ul class="content-list">
-          <li class="content-list__item"><a href="songOne.html">song 1</a></li>
-          <li class="content-list__item"><a href="songTwo.html">song 2</a></li>
-          <li class="content-list__item">
-            <a href="songThree.html">song 3</a>
-          </li>
-          <li class="content-list__item"><a href="songFour.html">song 4</a></li>
-          <li class="content-list__item"><a href="songFive.html">song 5</a></li>
-        </ul>
+        <h2 class="content-title">Song Name</h2>
+        <h3 class="content-title">By: Artist Name</h3>
+        <div class="content-container">
+          <ul>
+            <li>Lyrics</li>
+            <li>Description</li>
+            <li>Play Time</li>
+          </ul>
+        </div>
       </main>
       <footer class="footer">
         <small class="copy">&copy; 2019 - Muzify</small>
