--- a/src/public/prototypes/artists.html
+++ b/src/public/prototypes/artists.html
@@ -14,6 +14,7 @@
         <nav class="navbar">
           <ul class="navbar-list">
             <li class="navbar-list__item"><a href="songs.html">Songs</a></li>
+            <li class="navbar-list__item"><a href="dev.html">Dev</a></li>
             <li class="navbar-list__item">
               <a href="albums.html">Albums</a>
             </li>
